--- a/AksoParenet/pom.xml
+++ b/AksoParenet/pom.xml
@@ -14,6 +14,7 @@
         <module>AksoBusiness</module>
         <module>AksoWeb</module>
         <module>AksoBatch</module>
+        <module>AksoDemo</module>
     </modules>
 
 
