--- a/AksoParenet/AksoDemoTest/pom.xml
+++ b/AksoParenet/AksoDemoTest/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>AksoDemoTest</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.akso</groupId>
+            <artifactId>AksoDemo</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
