--- a/AksoParenet/pom.xml
+++ b/AksoParenet/pom.xml
@@ -17,6 +17,7 @@
         <module>AksoDemo</module>
         <module>AksoDemoTest</module>
         <module>AksoSpring</module>
+        <module>AksoAlgorithm</module>
     </modules>
 
     <properties>
