--- a/microservice-spring-cloud-parent/microservice-discovery-eureka/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-discovery-eureka/pom.xml
@@ -12,5 +12,11 @@
     <groupId>com.akso.springCloud</groupId>
     <artifactId>microservice-discovery-eureka</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-server</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
