--- a/microservice-spring-cloud-parent/microservice-discovery-eureka/src/main/resources/application.yml
+++ b/microservice-spring-cloud-parent/microservice-discovery-eureka/src/main/resources/application.yml
@@ -7,3 +7,7 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    instance-id: 192.168.15.93
+
