--- a/microservice-spring-cloud-parent/microservice-discovery-eureka/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-discovery-eureka/pom.xml
@@ -17,5 +17,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-server</artifactId>
+            <version>2.1.2.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
