--- a/microservice-spring-cloud-parent/pom.xml
+++ b/microservice-spring-cloud-parent/pom.xml
@@ -12,7 +12,7 @@
    <!-- <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.1.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
         <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
     </parent>-->
 
@@ -20,7 +20,7 @@
     <properties>
         <java.version>12</java.version>
         <spring.boot>2.1.6.RELEASE</spring.boot>
-        <cloud.version>Finchley.BUILD-SNAPSHOT</cloud.version>
+        <cloud.version>Greenwich.SR2</cloud.version>
     </properties>
 
     <modules>
