--- a/microservice-spring-cloud-parent/microservice-consumer-movie/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-consumer-movie/pom.xml
@@ -3,21 +3,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.akso.springCloud</groupId>
+        <groupId>com.akso.springCloud</groupId>```
         <artifactId>microservice-spring-cloud</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
     <groupId>com.example</groupId>
     <artifactId>microservice-consumer-movie</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>microservice-consumer-movie</name>
     <description>Demo project for Spring Boot</description>
-
-
+    <packaging>jar</packaging>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -28,5 +39,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
