--- a/microservice-spring-cloud-parent/microservice-provider-user/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-provider-user/pom.xml
@@ -35,10 +35,10 @@
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -53,17 +53,6 @@
             <artifactId>spring-test</artifactId>
             <version>5.1.8.RELEASE</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot</artifactId>
-            <version>1.4.1.RELEASE</version>
         </dependency>
     </dependencies>
     <build>
