--- a/microservice-spring-cloud-parent/pom.xml
+++ b/microservice-spring-cloud-parent/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-<!--        <cloud.version>Greenwich.SR1</cloud.version>-->
-        <cloud.version>Camden.SR3</cloud.version>
+        <cloud.version>Greenwich.SR1</cloud.version>
+        <!--<cloud.version>Camden.SR3</cloud.version>-->
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.1.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
