--- a/microservice-spring-cloud-parent/pom.xml
+++ b/microservice-spring-cloud-parent/pom.xml
@@ -11,7 +11,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <cloud.version>Greenwich.SR1</cloud.version>
+<!--        <cloud.version>Greenwich.SR1</cloud.version>-->
+        <cloud.version>Finchley.SR2</cloud.version>
+
         <!--<cloud.version>Camden.SR3</cloud.version>-->
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -22,7 +24,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.RELEASE</version>
+        <version>2.0.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
