--- a/microservice-spring-cloud-parent/microservice-provider-user/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-provider-user/pom.xml
@@ -49,10 +49,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>5.1.8.RELEASE</version>
-            <scope>test</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
     <build>
