--- a/microservice-spring-cloud-parent/microservice-consumer-movie/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-consumer-movie/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>xalan</artifactId>
             <version>2.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
