--- a/microservice-spring-cloud-parent/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-spring-cloud-parent/microservice-provider-user/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     data: classpath:data.sql
   application:
     name: microservice-provider-user
+
 logging:
   level:
     root: INFO
@@ -23,6 +24,6 @@ logging:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://user:123@localhost:8761/eureka
 instance:
   prefer-ip-address: true
