--- a/microservice-spring-cloud-parent/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-spring-cloud-parent/microservice-provider-user/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
   application:
     name: microservice-provider-user
 
+
 logging:
   level:
     root: INFO
@@ -24,6 +25,34 @@ logging:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:123@localhost:8761/eureka
+      defaultZone: http://admin:123456@localhost:8761/eureka
+      enabled: true
+      register-with-eureka: true
+      fetch-registry: true
+    healthcheck:
+      enabled: true
 instance:
   prefer-ip-address: true
+
+  #--------------关于actuator暴露端点的配置（version: Spring-Boot-2.0）-----------------
+  # 说明：
+  #   1.要通过actuator暴露端点，必须同时是启用（enabled）和暴露（exposed）的
+  #   2.所有除了/health和/info的端点，默认都是不暴露的
+  #   3.所有除了/shutdown的端点，默认都是启用的
+  # PS.生产环境由于安全性的问题，注意不要暴露敏感端点
+
+# 设置暴露所有端点
+
+management:
+  security:
+    enable: false
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+# 设置单个端点（/shutdown）可用
+#management.endpoint.shutdown.enabled=true
+
+# 设置暴露所有端点，除了env
+#management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=env
