--- a/microservice-spring-cloud-parent/microservice-consumer-movie/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-consumer-movie/pom.xml
@@ -34,6 +34,14 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>actuator
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
