--- a/microservice-spring-cloud-parent/microservice-movie-ribbon/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-movie-ribbon/pom.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.akso.springCloud</groupId>```
         <artifactId>microservice-spring-cloud-parent</artifactId>
+        <groupId>com.akso.springCloud</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.akso.springCloud</groupId>
-    <artifactId>microservice-consumer-movie</artifactId>
+    <artifactId>microservice-movie-ribbon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>microservice-consumer-movie</name>
-    <description>Demo project for Spring Boot</description>
+    <name>microservice-movie-ribbon</name>
+    <description>ribbon project for Spring cloud movie</description>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -52,4 +54,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
