--- a/microservice-spring-cloud-parent/pom.xml
+++ b/microservice-spring-cloud-parent/pom.xml
@@ -33,6 +33,7 @@
         <module>microservice-provider-user</module>
         <module>microservice-consumer-movie</module>
         <module>microservice-discovery-eureka</module>
+        <module>microservice-movie-ribbon</module>
     </modules>
     <dependencies>
         <dependency>
