--- a/microservice-spring-cloud-parent/microservice-consumer-movie-feign/pom.xml
+++ b/microservice-spring-cloud-parent/microservice-consumer-movie-feign/pom.xml
@@ -29,11 +29,11 @@
             <artifactId>xalan</artifactId>
             <version>2.7.2</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -43,9 +43,11 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>actuator
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.7.RELEASE</version>
         </dependency>
+
     </dependencies>
 
     <build>
