--- a/microservice-spring-cloud-parent/pom.xml
+++ b/microservice-spring-cloud-parent/pom.xml
@@ -34,6 +34,7 @@
         <module>microservice-consumer-movie</module>
         <module>microservice-discovery-eureka</module>
         <module>microservice-movie-ribbon</module>
+        <module>microservice-consumer-movie-feign</module>
     </modules>
     <dependencies>
         <dependency>
