--- a/microservice-spring-cloud-parent/pom.xml
+++ b/microservice-spring-cloud-parent/pom.xml
@@ -35,6 +35,8 @@
         <module>microservice-discovery-eureka</module>
         <module>microservice-movie-ribbon</module>
         <module>microservice-consumer-movie-feign</module>
+        <module>microservice-consumer-movie-feign-customizing</module>
+        <module>microservice-movie-ribbon-with-hystrix</module>
     </modules>
     <dependencies>
         <dependency>
