--- a/microservice-spring-cloud-parent/pom.xml
+++ b/microservice-spring-cloud-parent/pom.xml
@@ -37,6 +37,8 @@
         <module>microservice-consumer-movie-feign</module>
         <module>microservice-consumer-movie-feign-customizing</module>
         <module>microservice-movie-ribbon-with-hystrix</module>
+        <module>microservice-consumer-movie-feign-with-histrix</module>
+        <module>microservice-consumer-movie-feign-without-histrix</module>
     </modules>
     <dependencies>
         <dependency>
