--- a/microservice-spring-cloud-parent/microservice-gateway-zuul/src/main/resources/application.yml
+++ b/microservice-spring-cloud-parent/microservice-gateway-zuul/src/main/resources/application.yml
@@ -1,25 +1,20 @@
-
 server:
-  port: 8761
-
+  port: 8040
+spring:
+  application:
+    name: microservice-gateway-zuul
 eureka:
-  instance:
-    statusPageUrlPath: http://admin:123456@localhost:8761/info
-    healthCheckUrlPath: http://admin:123456@localhost:8761/health
   client:
     healthcheck:
       enabled: true
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
       defaultZone: http://admin:123456@localhost:8761/eureka
       instance: microservice-discovery-eureka
-    #prefer-ip-address: true
-    #instance-id: 192.168.15.93
-spring:
-  security:
-    user:
-      name: admin
-      password: 123456
 
-
+zuul:
+  routes:
+    users:
+      path: /simple/**
+        serviceId: users_service
