--- a/bootmongodb/src/main/resources/application.properties
+++ b/bootmongodb/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=leo
 
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+spring.devtools.restart.enabled=true
+spring.data.mongodb.uri=mongodb://localhost:27017/leo
+
+#spring.data.mongodb.uri=mongodb://zzq:123456@localhost:27017/leo
